kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic-dev
  labels:
    app: petclinic
