kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  namespace: petclinic-dev
spec:
  selector:
    app: petclinic
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
