kubernetes/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: petclinic-route
  namespace: petclinic-dev
spec:
  parentRefs:
  - name: petclinic-gateway
    namespace: petclinic-dev
  rules:
  - backendRefs:
    - name: petclinic-service
      group: net.gke.io
      kind: ServiceImport
      port: 80
